# SDSS-Analysis

./: 01_intro.ipynb  02_bimodality.ipynb  03_structure.ipynb  04_dist_lum.ipynb  05_machine_learning.ipynb  06_summary.ipynb  README.md  formatting.py  main.ipynb  part1-intro.ipynb  part2-bimodality.ipynb  pyproject.toml  sdss.py
csv/: SDSS_500k_v3.csv
src/analysislib/: formatting.py  graphs.py  sdss.py
